<resources>
    <string name="app_name">Hello</string>
    <string name="action_settings">Settings</string>
    <string name="lable_add1">+1 point</string>
    <string name="lable_add2">+2 points</string>
    <string name="lable_add3">+3 points</string>
    <string name="btu_reset_label">Reset</string>
    <string name="_0">0</string>
    <string name="teama">TeamA</string>
    <string name="teamb">TeamB</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="rmb_hint">Input RMB</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="btn_opencfg_label">Config</string>
    <string name="btn_save_label">Save</string>
    <string name="item">Item</string>
    <string name="menu_set_label">Setting</string>
</resources>
